<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KayitActivity"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/kayit_resmi"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/signup"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:scaleType="fitXY"
                android:contentDescription="@string/todo"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_marginTop="24dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/kayit_email"
                android:layout_below="@+id/kayit_resmi"
                android:layout_alignParentLeft="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/girdiler"
                android:hint="@string/e_mail_adresi"
                android:textSize="26sp"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:autofillHints=""
                android:layout_alignParentStart="true"
                android:drawableStart="@drawable/ic_baseline_email_24" />

            <EditText
                android:layout_marginTop="24dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/kayit_sifre"
                android:layout_below="@+id/kayit_email"
                android:layout_alignParentLeft="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/girdiler"
                android:hint="@string/sifre"
                android:textSize="26sp"
                android:inputType="textPassword"
                android:padding="8dp"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:autofillHints=""
                android:layout_alignParentStart="true"
                android:drawableStart="@drawable/ic_baseline_lock_24" />

            <Button
                android:id="@+id/kayit_butonu"
                android:layout_below="@id/kayit_sifre"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonlar"
                android:padding="8dp"
                android:text="@string/kayit_ol"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:textColor="@android:color/background_light"/>

            <TextView
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/zaten_hesap_Var"
                android:layout_below="@+id/kayit_butonu"
                android:layout_alignParentEnd="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zaten_hesabiniz_var_mi"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="16sp"
                android:padding="8dp"
                android:layout_alignParentRight="true"
                android:gravity="end"
                tools:ignore="RtlCompat" />


</RelativeLayout>
    </ScrollView>
</RelativeLayout>